--- a/epos2_sink/etc/eposmkbi.conf
+++ b/epos2_sink/etc/eposmkbi.conf
@@ -1,15 +1,15 @@
 MODE=library
 ARCH=armv7
 MACH=cortex
-MMOD=emote3
+MMOD=lm3s811
 CPUS=1
 CLOCK== Traits<Build>::Zynq ? 666666687 : 32000000
 WORD_SIZE=32
 ENDIANESS=little
-MEM_BASE=0x20000004
-MEM_TOP=0x20007ff7
+MEM_BASE=0x20000000
+MEM_TOP=0x20001fff
 BOOT_LENGTH_MIN=
 BOOT_LENGTH_MAX=
 NODE_ID=
 N_NODES=
-UUID=ec894b03a0f64bdb8b3ce9efaf96a862
+UUID=80579d5b241c47c48d7f1aff44fbe398
